--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <!-- Custom CSS -->
   <link href="assets/css/style.css" rel="stylesheet">
   <!-- You can change the theme colors from here -->
-  <link href="assets/css/colors/blue.css" id="theme" rel="stylesheet">
+  <link id="tema" id="theme" rel="stylesheet">
 </head>
 <body class="fix-header card-no-border fix-sidebar">
 <div class="preloader">
